<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/mainAdMark"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:visibility="gone">
	
	<TextView
		android:id="@+id/mainCode"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="8dp"
		android:text="源代码"
		android:textColor="@color/light"
		android:textSize="16sp" />
	
	<TextView
		android:id="@+id/mainjQuery"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="8dp"
		android:text="屏蔽语句(jQuery)"
		android:textColor="@color/light"
		android:textSize="16sp" />
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="8dp"
		android:paddingBottom="8dp">
		
		<TextView
			android:id="@+id/cancel"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:gravity="center"
			android:text="@string/cancel"
			android:textColor="@color/accent"
			android:textSize="16sp" />
		
		<TextView
			android:id="@+id/mod"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:gravity="center"
			android:text="@string/mod"
			android:textColor="@color/accent"
			android:textSize="16sp" />
		
		<TextView
			android:id="@+id/ok"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:gravity="center"
			android:text="@string/remark"
			android:textColor="@color/accent"
			android:textSize="16sp" />
	
	</LinearLayout>


</LinearLayout>