<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
	
	<data class="AboutDB">
		
		<variable
			name="bean"
			type="com.zmide.lit.bean.AboutBean" />
		
		<variable
			name="event"
			type="com.zmide.lit.ui.AboutActivity.EventListener" />
	</data>
	
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/bgcolor"
		android:fitsSystemWindows="true">
		
		<RelativeLayout
			android:id="@+id/aboutBar"
			android:layout_width="match_parent"
			android:layout_height="48dp">
			
			<ImageView
				android:id="@+id/aboutBack"
				android:layout_width="32dp"
				android:layout_height="32dp"
				android:layout_centerVertical="true"
				android:layout_marginLeft="8dp"
				android:background="@drawable/ripple_circle"
				android:onClick="@{event::back}"
				android:padding="4dp"
				android:src="@drawable/ic_back"
				android:tint="@color/accent" />
		
		</RelativeLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/aboutBar"
			android:gravity="center_horizontal"
			android:orientation="vertical">
			
			<ImageView
				android:id="@+id/icon"
				android:layout_width="100dp"
				android:layout_height="100dp"
				android:layout_marginTop="40dp" />
			
			<TextView
				android:id="@+id/aboutVersion"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@{bean.version}"
				android:textColor="@color/light"
				android:textSize="16sp" />
		
		</LinearLayout>
		
		
		<TextView
			android:id="@+id/aboutUpdate"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_above="@id/aboutQQGroup"
			android:layout_marginLeft="24dp"
			android:layout_marginRight="24dp"
			android:layout_marginBottom="0dp"
			android:background="@drawable/ripple_blue_24"
			android:gravity="center"
			android:onClick="@{event::UpdateClick}"
			android:text="@string/check_update"
			android:textColor="#FFFFFF" />
		
		<TextView
			android:id="@+id/aboutQQGroup"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_above="@id/aboutCopyright"
			android:layout_margin="24dp"
			android:background="@drawable/ripple_blue_24"
			android:gravity="center"
			android:onClick="@{event::joinQQGroup}"
			android:text="@string/joinQQGroup"
			android:textColor="#FFFFFF" />
		
		
		<TextView
			android:id="@+id/aboutCopyright"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="8dp"
			android:gravity="center"
			android:text="@string/copyright"
			android:textColor="@color/light"
			android:textSize="10sp" />
	
	
	</RelativeLayout>

</layout>